--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">IgarapeTest</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="main_title">My Lat Long</string>
     <string name="action_settings">Settings</string>
+    <string name="lat_label">Latitude:</string>
+    <string name="lon_label">Longitude:</string>
+    <string name="lat">\?</string>
+    <string name="lon">\?</string>
+    <string name="see_igarape">Hey Click Me!</string>
 </resources>
